--- a/.travis.yml
+++ b/.travis.yml
@@ -4,37 +4,21 @@ language: python
 services: docker
 
 env:
-  - distro: alpine:3.5
-  - distro: alpine:3.6
-  - distro: centos:7
-  - distro: centos:6
-  - distro: debian:jessie
-  - distro: debian:buster
-  - distro: fedora:26
-  - distro: fedora:27
-  - distro: ubuntu:zesty
-  - distro: ubuntu:artful
+  - ansible_version: 2.2.0
+  - ansible_version: 2.3.0
+  - ansible_version: 2.4.0
 
-before_install:
-  - docker pull "${distro}"
+cache:
+  - pip
 
 install:
-  - role=$(basename $(pwd) | sed 's/ansible-role-//g')
-  - containerid=$(docker container run --detach --volume $(pwd):/etc/ansible/roles/${role} ${distro} sleep infinite)
-  - if [[ ${distro} == alpine:* ]] ; then docker exec ${containerid} apk add --update ansible ; fi
-  - if [[ ${distro} == centos:6 ]] ; then docker exec ${containerid} yum -y install epel-release ; fi
-  - if [[ ${distro} == centos:* ]] ; then docker exec ${containerid} yum -y install ansible ; fi
-  - if [[ ${distro} == debian:* ]] ; then docker exec ${containerid} apt-get update ; fi
-  - if [[ ${distro} == debian:* ]] ; then docker exec ${containerid} apt-get -y install ansible ; fi
-  - if [[ ${distro} == fedora:* ]] ; then docker exec ${containerid} dnf -y install ansible ; fi
-  - if [[ ${distro} == opensuse:* ]] ; then docker exec ${containerid} zypper --non-interactive install ansible || echo $? ; fi
-  - if [[ ${distro} == ubuntu:* ]] ; then docker exec ${containerid} apt-get update ; fi
-  - if [[ ${distro} == ubuntu:* ]] ; then docker exec ${containerid} apt-get -y install ansible ; fi
+  - pip install --upgrade pip
+  - pip install ansible==${ansible_version}
+  - pip install molecule
+  - pip install docker-py
 
 script:
-  - test -f requirements.yml && docker exec ${containerid} ansible-galaxy install --ignore-certs --role-file /etc/ansible/roles/${role}/requirements.yml || echo "No requirements.yml found."
-  - docker exec ${containerid} ansible-playbook --inventory /etc/ansible/roles/${role}/tests/inventory /etc/ansible/roles/${role}/tests/test.yml --syntax-check
-  - docker exec ${containerid} ansible-playbook --inventory /etc/ansible/roles/${role}/tests/inventory /etc/ansible/roles/${role}/tests/test.yml --connection=local --become
+  - molecule test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
