--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,51 @@
 ---
 # tasks file for ansible-role-template
-- name: update all software
-  package:
-    name: *
+- name: update all software (CentOS-6)
+  yum:
+    name: "*"
     state: latest
   notify: reboot
   when:
     - ansible_virtualization_type != "docker"
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == 6
+
+  - name: update all software (CentOS-7)
+    dnf:
+      name: "*"
+      state: latest
+    notify: reboot
+    when:
+      - ansible_virtualization_type != "docker"
+      - ansible_distribution == "CentOS"
+      - ansible_distribution_major_version == 7
+
+- name: update all software (Fedora)
+  dnf:
+    name: "*"
+    state: latest
+  notify: reboot
+  when:
+    - ansible_virtualization_type != "docker"
+    - ansible_distribution == "Fedora"
+
+  - name: update all software (openSUSE)
+    yum:
+      name: "*"
+      state: latest
+    notify: reboot
+    when:
+      - ansible_virtualization_type != "docker"
+      - ansible_distribution == "openSUSE Leap"
+
+  - name: update all software (Debian/Ubuntu)
+    apk:
+      update_cache: yes
+      upgrade: yes
+    notify: reboot
+    when:
+      - ansible_virtualization_type != "docker"
+      - ansible_distribution in [ "Debian", "Ubuntu" ]
 
 - name: flush handlers
   meta: flush_handlers
