--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,9 +6,8 @@
     state: latest
   notify: reboot
   when:
-    - ansible_virtualization_type != "docker"
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == 6
+    - ansible_distribution_major_version == "6"
   tags:
     - skip_ansible_lint
 
@@ -19,9 +18,8 @@
     state: latest
   notify: reboot
   when:
-    - ansible_virtualization_type != "docker"
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == 7
+    - ansible_distribution_major_version == "7"
   tags:
     - skip_ansible_lint
 
@@ -31,7 +29,6 @@
     state: latest
   notify: reboot
   when:
-    - ansible_virtualization_type != "docker"
     - ansible_distribution == "Fedora"
   tags:
     - skip_ansible_lint
@@ -42,7 +39,6 @@
     state: latest
   notify: reboot
   when:
-    - ansible_virtualization_type != "docker"
     - ansible_distribution == "openSUSE Leap"
   tags:
     - skip_ansible_lint
@@ -53,7 +49,6 @@
     upgrade: yes
   notify: reboot
   when:
-    - ansible_virtualization_type != "docker"
     - ansible_distribution in [ "Debian", "Ubuntu" ]
 
 - name: flush handlers
