--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,12 @@
 ---
 # tasks file for ansible-role-template
-- name: update all software (CentOS-6)
+- name: update all software (CentOS)
   yum:
     name: "*"
     state: latest
   notify: reboot
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == "6"
-  tags:
-    - skip_ansible_lint
-
-
-- name: update all software (CentOS-7)
-  dnf:
-    name: "*"
-    state: latest
-  notify: reboot
-  when:
-    - ansible_distribution == "CentOS"
-    - ansible_distribution_major_version == "7"
   tags:
     - skip_ansible_lint
 
