Different approach for Debian/Ubuntu. Fixing: Could not find aptitude. Please ensure it is installed

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,7 +33,7 @@
 - name: update all software (Debian/Ubuntu)
   apt:
     update_cache: yes
-    upgrade: yes
+    upgrade: dist
   notify: reboot
   when:
     - ansible_distribution in [ "Debian", "Ubuntu" ]
