--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ language: python
 services: docker
 
 env:
-  - ansible_version: 'ansible>=2.3,<2.4'
-  - ansible_version: 'ansible>=2.4,<2.5'
+  - ansible_version=">=2.3,<2.4"
+  - ansible_version=">=2.4,<2.5"
 
 cache:
   - pip
 
 install:
   - pip install --upgrade pip
-  - pip install ${ansible_version}
+  - pip install ansible"${ansible_version}"
   - pip install molecule
   - pip install docker-py
 
