--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,18 +7,18 @@ galaxy_info:
   min_ansible_container_version: 0.2.0
 
   platforms:
-    - name: alpine
+    - name: Alpine
       versions:
         - all
-    - name: debian
+    - name: Debian
       versions:
         - jessie
         - buster
-    - name: el
+    - name: EL
       versions:
         - 6
         - 7
-    - name: fedora
+    - name: Fedora
       versions:
         - 26
         - 27
@@ -26,7 +26,7 @@ galaxy_info:
       versions:
         - 42.2
         - 42.3
-    - name: ubuntu
+    - name: Ubuntu
       versions:
         - artful
         - zesty
