--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,30 +1,23 @@
 ---
 # handlers file for update
 - name: reboot
-  shell: (sleep 3 && shutdown -r now "update" &)
+  shell: (sleep 10 && shutdown -r now "ansible-role-update" &)
   async: 1
   poll: 0
   ignore_errors: yes
-  notify: wait for the machine to be up
+  changed_when: no
   when:
     - ansible_virtualization_type != "docker"
 
 - name: wait for the machine to be down
-  become: no
-  delegate_to: localhost
-  wait_for:
-    host: "{{ ansible_ssh_host | default(inventory_hostname) }}"
-    port: "{{ ansible_port }}"
-    state: stopped
-  notify: wait for the machine to be up
+  wait_for_connection:
+  register: connection
+  until: connection | failed
+  retries: 10
+  failed_when:
+    - connection | success
+  when:
+    - ansible_virtualization_type != "docker"
 
 - name: wait for the machine to be up
-  become: no
-  delegate_to: localhost
   wait_for_connection:
-    delay: "{{ update_delay }}"
-  notify: wait a little longer
-
-- name: wait a little longer
-  pause:
-    seconds: 10
