Different notify structure.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,14 @@
 ---
 # handlers file for update
 - name: reboot
-  shell: (sleep 10 && shutdown -r now "ansible-role-update" &)
+  shell: (sleep 30 && shutdown -r now "ansible-role-update" &)
   async: 1
   poll: 0
   ignore_errors: yes
   changed_when: no
   when:
     - ansible_virtualization_type != "docker"
+  notify: wait for the machine to be down
 
 - name: wait for the machine to be down
   wait_for_connection:
@@ -18,6 +19,7 @@
     - connection | success
   when:
     - ansible_virtualization_type != "docker"
+  notify: wait for the machine to be up
 
 - name: wait for the machine to be up
   wait_for_connection:
