--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,11 @@
 ---
 # defaults file for update
-# How long to wait before checking if the machine is up.
-update_delay: 32
+
+# How long to wait before sending the reboot signal.
+update_reboot_delay: 16
+
+# How many times to retry before machine is down.
+update_down_retries: 180
+
+# How long to wait between the retries before machine is down.
+update_down_delay: 1
