--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,12 +18,22 @@ platforms:
     image: centos:6
   - name: update-centos-7
     image: centos:7
-  - name: update-debian-jessie
-    image: debian:jessie
-  - name: update-debian-stretch
-    image: debian:stretch
   - name: update-debian-buster
     image: debian:buster
+  - name: update-debian-jessie
+    image: debian:jessie
+  - name: update-debian-sid
+    image: debian:sid
+  - name: update-debian-stretch
+    image: debian:stretch
+  - name: update-debian-wheezy
+    image: debian:wheezy
+  - name: update-fedora-23
+    image: fedora:23
+  - name: update-fedora-24
+    image: fedora:24
+  - name: update-fedora-25
+    image: fedora:25
   - name: update-fedora-26
     image: fedora:26
   - name: update-fedora-27
