--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -46,13 +46,22 @@
   apt:
     update_cache: yes
     upgrade: dist
-    autoremove: "{{ update_autoremove }}"
   notify:
     - reboot
     - wait for the machine to be down
     - wait for the machine to be up
   when:
     - ansible_pkg_mgr == "apt"
+  register: ansibleroleupdate
+
+
+- name: apt autoremove (Debian/Ubuntu)
+  apt:
+    autoremove: "{{ update_autoremove }}"
+  when:
+    - ansible_pkg_mgr == "apt"
+    - update_autoremove == "yes"
+
   register: ansibleroleupdate
 
 - name: flush handlers
