--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,45 +1,15 @@
 ---
 # tasks file for update
-- name: update all software (yum)
-  yum:
-    name: "*"
-    state: latest
+- name: update all software (apk)
+  apk:
+    upgrade: yes
+    update_cache: yes
   notify:
     - reboot
     - wait for the machine to be down
     - wait for the machine to be up
   when:
-    - ansible_pkg_mgr == "yum"
-  tags:
-    - skip_ansible_lint
-  register: ansibleroleupdate
-
-- name: update all software (dnf)
-  dnf:
-    name: "*"
-    state: latest
-  notify:
-    - reboot
-    - wait for the machine to be down
-    - wait for the machine to be up
-  when:
-    - ansible_pkg_mgr == "dnf"
-  tags:
-    - skip_ansible_lint
-  register: ansibleroleupdate
-
-- name: update all software (zypper)
-  zypper:
-    name: "*"
-    state: latest
-  notify:
-    - reboot
-    - wait for the machine to be down
-    - wait for the machine to be up
-  when:
-    - ansible_pkg_mgr == "zypper"
-  tags:
-    - skip_ansible_lint
+    - ansible_pkg_mgr == "apk"
   register: ansibleroleupdate
 
 - name: update all software (apt)
@@ -60,6 +30,48 @@
   when:
     - ansible_pkg_mgr == "apt"
     - update_autoremove == "yes"
+
+- name: update all software (dnf)
+  dnf:
+    name: "*"
+    state: latest
+  notify:
+    - reboot
+    - wait for the machine to be down
+    - wait for the machine to be up
+  when:
+    - ansible_pkg_mgr == "dnf"
+  tags:
+    - skip_ansible_lint
+  register: ansibleroleupdate
+
+- name: update all software (yum)
+  yum:
+    name: "*"
+    state: latest
+  notify:
+    - reboot
+    - wait for the machine to be down
+    - wait for the machine to be up
+  when:
+    - ansible_pkg_mgr == "yum"
+  tags:
+    - skip_ansible_lint
+  register: ansibleroleupdate
+
+- name: update all software (zypper)
+  zypper:
+    name: "*"
+    state: latest
+  notify:
+    - reboot
+    - wait for the machine to be down
+    - wait for the machine to be up
+  when:
+    - ansible_pkg_mgr == "zypper"
+  tags:
+    - skip_ansible_lint
+  register: ansibleroleupdate
 
 - name: flush handlers
   meta: flush_handlers
