--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,6 +22,7 @@
   apt:
     update_cache: yes
     upgrade: dist
+    cache_valid_time: "{{ update_cache_valid_time }}"
   notify:
     - reboot
     - wait for the machine to be down
