Preparing for Ansible 2.5. http://docs.ansible.com/ansible/devel/porting_guides/porting_guide_2.5.html

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -18,11 +18,11 @@
     sleep: "{{ update_down_sleep }}"
     timeout: "{{ update_down_timeout }}"
   register: connection
-  until: connection | failed
+  until: connection is failed
   failed_when:
-    - connection | success
+    - connection is success
   changed_when:
-    - connection | failed
+    - connection is failed
   retries: "{{ update_down_retries }}"
   when:
     - ansible_virtualization_type != "docker"
