Try a different down-sensor.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -13,21 +13,27 @@
     - wait for the machine to be down
 
 - name: wait for the machine to be down
-  wait_for_connection:
-    connect_timeout: "{{ update_down_connect_timeout }}"
-    sleep: "{{ update_down_sleep }}"
-    timeout: "{{ update_down_timeout }}"
-  register: connection
-  until: connection is failed
-  failed_when:
-    - connection is success
-  changed_when:
-    - connection is failed
-  retries: "{{ update_down_retries }}"
-  when:
-    - ansible_virtualization_type != "docker"
-  notify:
-    - wait for the machine to be up
+  local_action: wait_for
+    host: {{ ansible_ssh_host }}
+    port: {{ ansible_ssh_port }}
+    state: stopped
+
+# - name: wait for the machine to be down
+#   wait_for_connection:
+#     connect_timeout: "{{ update_down_connect_timeout }}"
+#     sleep: "{{ update_down_sleep }}"
+#     timeout: "{{ update_down_timeout }}"
+#   register: connection
+#   until: connection is failed
+#   retries: "{{ update_down_retries }}"
+#   failed_when:
+#     - connection is success
+#   changed_when:
+#     - connection is failed
+#   when:
+#     - ansible_virtualization_type != "docker"
+#   notify:
+#     - wait for the machine to be up
 
 - name: wait for the machine to be up
   wait_for_connection:
