--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -16,7 +16,7 @@
   local_action: wait_for
   args:
     host: "{{ ansible_ssh_host }}"
-    port: "{{ ansible_ssh_port }}"
+    port: "{{ ansible_ssh_port | default('22') }}"
     state: stopped
 
 # - name: wait for the machine to be down
