--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,9 @@ update_down_timeout: 1
 # Number of seconds to sleep between checks.
 update_down_sleep: 1
 
+# Number of seconds to wait before checking if the machine is up.
+update_up_delay: 30
+
 # For APT (Debian/Ubuntu) only: remove unused dependency packages for all module states except `build-dep'
 update_autoremove: no
 
