Adding correct tests

--- a/molecule/ubuntu-bionic/playbook.yml
+++ b/molecule/ubuntu-bionic/playbook.yml
@@ -1,12 +1,9 @@
 ---
 - name: Converge
   hosts: all
-  gather_facts: no
   become: yes
+  gather_facts: no
 
   roles:
-    - role: ansible-role-bootstrap
-
-  tasks:
-    - name: test connection
-      ping:
+    - role: robertdebock.bootstrap
+    - role: ansible-role-update
