--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -42,15 +42,10 @@ platforms:
     image: opensuse:42.2
   - name: update-opensuse-42.3
     image: opensuse:42.3
-    # 14.04 LTS
-  - name: update-ubuntu-trusty
-    image: ubuntu:trusty
-    # 16.04 LTS
-  - name: update-ubuntu-xenial
-    image: ubuntu:xenial
-    # 17.04
   - name: update-ubuntu-artful
     image: ubuntu:artful
+  - name: update-ubuntu-bionic
+    image: ubuntu:bionic
 provisioner:
   name: ansible
   lint:
