Cleanup of test code to work with newly released molecule version.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,13 +1,13 @@
 ---
 - name: Converge
   hosts: all
-  become: yes
-  gather_facts: no
+  become: true
+  gather_facts: false
 
   roles:
     - role: robertdebock.bootstrap
     - role: ansible-role-update
-      update_autoremove: yes
+      update_autoremove: true
 
   tasks:
     - name: test connection
