--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for update
-# How long to wait before sending a reboot.
-update_reboot_delay: 4
+# How long to wait in minutes before rebooting.
+update_reboot_delay: 1
 
 # How many times should we try to connect.
 update_down_retries: 128
@@ -15,8 +15,8 @@ update_down_timeout: 1
 # Number of seconds to sleep between checks.
 update_down_sleep: 1
 
-# Number of seconds to wait before checking if the machine is up.
-update_up_delay: 8
+# Number of minutes to wait before checking if the machine is up.
+update_up_delay: 2
 
 # For APT (Debian/Ubuntu) only: remove unused dependency packages for all module states except `build-dep'
 update_autoremove: no
