--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 # handlers file for update
 - name: reboot
-  shell: (sleep "{{ update_reboot_delay }}" && shutdown -r now "ansible-role-update" &)
-  async: 1
-  poll: 0
-  ignore_errors: yes
+  at:
+    command: reboot
+    count: "{{ update_reboot_delay }}"
+    units: minutes
   when:
     - ansible_virtualization_type != "docker"
     - update_reboot
