--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -69,13 +69,13 @@
   register: update_result
 
 - name: see if a reboot is required
-  command: needs-restarting -r
-  register: needs-restarting
+  command: needsrestarting -r
+  register: needsrestarting
   changed_when:
-    - needs-restarting.rc != 0
+    - needsrestarting.rc != 0
   failed_when:
-    - needs-restarting.rc != 1
-    - needs-restarting.rc != 0
+    - needsrestarting.rc != 1
+    - needsrestarting.rc != 0
   notify:
     - reboot
   when:
