--- a/molecule/alpine-latest/molecule.yml
+++ b/molecule/alpine-latest/molecule.yml
@@ -8,14 +8,14 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: update-opensuse-42.3
-    image: opensuse:42.3
+  - name: update-alpine-latest
+    image: alpine:latest
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
 scenario:
-  name: opensuse-42.3
+  name: alpine-latest
 verifier:
   name: goss
   lint:
