Ansible Fest 2018 improvements.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 # handlers file for update
-- name: reboot
+- name: reboot the machine
   shell: (sleep "{{ update_reboot_delay }}" && shutdown -r now "ansible-role-update" &)
   async: 1
   poll: 0
@@ -8,8 +8,6 @@
   when:
     - ansible_virtualization_type != "docker"
     - update_reboot
-  notify:
-    - wait for the machine to be up
 
 - name: wait for the machine to be up
   wait_for_connection:
