--- a/molecule/alpine-edge/molecule.yml
+++ b/molecule/alpine-edge/molecule.yml
@@ -10,6 +10,7 @@ lint:
 platforms:
   - name: update-alpine-edge
     image: alpine:edge
+    command: sh -c "while true ; do sleep 1 ; done"
 provisioner:
   name: ansible
   lint:
