--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,8 @@ galaxy_info:
   author: Robert de Bock
   role_name: update
   description: Provides updates for your system.
-  license: Apache License, Version 2.0
+  license: Apache-2.0
+  company: none
   min_ansible_version: 2.4
 
   platforms:
