--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,7 @@
 - name: update all software (apk)
   apk:
     upgrade: yes
-  register: update_result
+  register: update_result_apk
   when:
     - ansible_pkg_mgr == "apk"
 
@@ -19,7 +19,7 @@
     update_cache: yes
     upgrade: "{{ update_upgrade_command }}"
     cache_valid_time: "{{ update_cache_valid_time }}"
-  register: update_result
+  register: update_result_apt
   when:
     - ansible_pkg_mgr == "apt"
 
@@ -34,7 +34,7 @@
   dnf:
     name: "*"
     state: latest
-  register: update_result
+  register: update_result_dnf
   when:
     - ansible_pkg_mgr == "dnf"
   tags:
@@ -44,7 +44,7 @@
   pacman:
     update_cache: yes
     upgrade: yes
-  register: update_result
+  register: update_result_pacman
   when:
     - ansible_pkg_mgr == "pacman"
   tags:
@@ -59,7 +59,7 @@
     - ansible_distribution_major_version == "6"
   tags:
     - skip_ansible_lint
-  register: update_result
+  register: update_result_yum_6
 
 - name: update all software (yum/7)
   yum:
@@ -70,7 +70,7 @@
     - ansible_distribution_major_version == "7"
   tags:
     - skip_ansible_lint
-  register: update_result
+  register: update_result_yum_7
 
 - name: install yum-utils
   package:
@@ -78,19 +78,6 @@
   when:
     - ansible_pkg_mgr == "yum"
     - ansible_distribution_major_version == "7"
-
-- name: see if a reboot is required
-  command: needs-restarting -r
-  register: needsrestarting
-  changed_when:
-    - needsrestarting.rc != 0
-  failed_when:
-    - needsrestarting.rc != 1
-    - needsrestarting.rc != 0
-  when:
-    - ansible_pkg_mgr == "yum"
-    - ansible_distribution_major_version == "7"
-    - ansible_virtualization_type != "docker"
 
 - name: update all software (zypper)
   zypper:
@@ -100,12 +87,23 @@
     - ansible_pkg_mgr == "zypper"
   tags:
     - skip_ansible_lint
-  register: update_result
+  register: update_result_zypper
+
+- name: show shit
+  debug:
+    var: update_result
 
 - name: reboot for updates
   include_role:
     name: robertdebock.reboot
+  vars:
+    reboot_message: rebooting for robertdebock/ansible-role-update
   when:
-    - update_result.changed or
-      needsrestarting.changed
+    - update_result_apk.changed or
+      update_result_apt.changed or
+      update_result_dnf.changed or
+      update_result_pacman.changed or
+      update_result_yum_6.changed or
+      update_result_yum_7.changed or
+      update_result_zypper.changed
     - update_reboot
