Remove debugging information.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -5,8 +5,5 @@
   become: true
 
   roles:
-    - role: ansible-role-bootstrap
-
-  tasks:
-    - name: test connection
-      ping:
+    - role: robertdebock.bootstrap
+    - role: ansible-role-update
