Expand test documentation, fix default molecule scenario, add ec2 scenario.

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -39,7 +39,7 @@ platforms:
   - name: update-ubuntu-devel
     image: ubuntu:devel
   - name: update-ubuntu-latest
-    image: ubuntu-latest
+    image: ubuntu:latest
 provisioner:
   name: ansible
   lint:
