--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -42,6 +42,10 @@ platforms:
     image: ubuntu:latest
 provisioner:
   name: ansible
+  inventory:
+    host_vars:
+      update-fedora-rawhide:
+        ansible_python_interpreter: /usr/bin/python3
   lint:
     name: ansible-lint
   config_options:
