--- a/molecule/fedora-rawhide/molecule.yml
+++ b/molecule/fedora-rawhide/molecule.yml
@@ -14,6 +14,10 @@ platforms:
       url: registry.fedoraproject.org
 provisioner:
   name: ansible
+  inventory:
+    host_vars:
+      update-fedora-rawhide:
+        ansible_python_interpreter: /usr/bin/python3
   lint:
     name: ansible-lint
 scenario:
